fix span breadcrumbs font size on mobile

--- a/scss/main.css
+++ b/scss/main.css
@@ -824,7 +824,8 @@ footer .footer__container__bottom .contip img {
   .breadcrumbs ul li.breadcrumb-item:first-of-type {
     margin-left: -12px;
   }
-  .breadcrumbs ul li.breadcrumb-item a {
+  .breadcrumbs ul li.breadcrumb-item a,
+  .breadcrumbs ul li.breadcrumb-item span {
     font-weight: 400;
     font-size: 11px;
     line-height: 12px;
